Undo fix for site search not appearing on small devices (8 feb)

--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -74,6 +74,10 @@ $site-header__top-band-colour: $ds_colour__brand;
         margin-right: 8px;
         pointer-events: none;
     }
+
+    &__search {
+        display: none;
+    }
 }
 
 /* variant with the top colour bar set to a gradient of site brand colours */
